--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -31,7 +31,9 @@
                 android:layout_marginLeft="@dimen/margin_small"
                 android:layout_marginStart="@dimen/margin_small"
                 android:background="@drawable/menubutton"
-                android:gravity="start|center" />
+                android:gravity="start|center"
+                android:onClick="showMenu"
+                />
 
             <TextView
                 android:id="@+id/textView_Title"
