--- a/app/src/main/res/layout/activity_destination_detail.xml
+++ b/app/src/main/res/layout/activity_destination_detail.xml
@@ -40,6 +40,7 @@
 
                 <ImageView
                     android:id="@+id/imageView_DestinationLoop"
+                    android:contentDescription="@string/image_place"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="fitXY"
