--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -23,6 +23,7 @@
         android:id="@+id/imageView_PlaceImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:contentDescription="@string/image_place"
         android:layout_centerInParent="true"
         android:scaleType="fitXY"
         android:src="@drawable/tirthan2" />
