--- a/app/src/main/res/layout/listview_destinations.xml
+++ b/app/src/main/res/layout/listview_destinations.xml
@@ -19,6 +19,7 @@
 
         <ImageView
             android:id="@+id/imageView_Place"
+            android:contentDescription="@string/image_place"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="@dimen/margin_small"
