--- a/app/src/main/res/layout/listview_events.xml
+++ b/app/src/main/res/layout/listview_events.xml
@@ -25,6 +25,7 @@
 
             <ImageView
                 android:id="@+id/imageView_PlaceImage"
+                android:contentDescription="@string/image_place"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
